Revert "rendered quarto"
This reverts commit ee50c357d1a7585ddbedccd8f5cc3377f33b9982.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,7 @@ project:
 
 book:
   title: "The Unjournal evaluations: data and analysis"
-  author: "David Reinstein and the Unjournal team"
+  author: "David Reinstein and the TUnjournal team"
   repo-url: https://github.com/daaronr/unjournaldata/
   repo-actions: [edit, issue]
   chapters:
