add paper pipeline chapter and move relevant content there, some data input fixes

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,7 @@ book:
   chapters:
     - index.qmd
     - chapters/evaluation_data_input.qmd
+    - chapters/research_prioritization_pipeline.qmd
     - chapters/evaluation_data_analysis.qmd
     - chapters/aggregation.qmd
       #- references.qmd
