--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Setup R
         uses: r-lib/actions/setup-r@v2
 
+      - name: Install jags on Linux
+        run: sudo apt-get install jags
+
       # From https://github.com/r-lib/actions/tree/v2/setup-renv
       - name: Setup dependencies with renv
         uses: r-lib/actions/setup-renv@v2
@@ -53,13 +56,13 @@ jobs:
       #     CONNECT_SERVER: enter-the-server-url-here
       #     CONNECT_API_KEY: ${{ secrets.CONNECT_API_KEY }} 
 
-      # NOTE: If Publishing to GitHub Pages, set the permissions correctly (see top of this yaml)
-      # - name: Publish to GitHub Pages (and render) 
-      #   uses: quarto-dev/quarto-actions/publish@v2
-      #   with:
-      #     target: gh-pages
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
+      NOTE: If Publishing to GitHub Pages, set the permissions correctly (see top of this yaml)
+      - name: Publish to GitHub Pages (and render)
+        uses: quarto-dev/quarto-actions/publish@v2
+        with:
+          target: gh-pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
 
       # - name: Publish to confluence
       #   uses: quarto-dev/quarto-actions/publish@v2
