--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Setup R
         uses: r-lib/actions/setup-r@v2
 
-      - name: Install jags on Linux
-        run: sudo apt-get install jags
+      - name: Install jags and curl on Linux
+        run: sudo apt-get install jags libcurl4-openssl-dev
 
       # From https://github.com/r-lib/actions/tree/v2/setup-renv
       - name: Setup dependencies with renv
