--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -30,7 +30,7 @@ jobs:
         uses: r-lib/actions/setup-r@v2
 
       - name: Install system dependencies on Linux
-        run: sudo apt-get install jags libcurl4-openssl-dev libharfbuzz-dev libfribidi-dev 
+        run: sudo apt-get install jags libcurl4-openssl-dev libharfbuzz-dev libfribidi-dev libsodium-dev
 
       # From https://github.com/r-lib/actions/tree/v2/setup-renv
       - name: Setup dependencies with renv
