--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -18,19 +18,23 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
         
+      - name: Import unjournal data
+        run: Rscript code/import-unjournal-data.R
+        env: # Or as an environment variable
+          AIRTABLE_API_KEY: ${{ secrets.AIRTABLE_API_KEY }}
+        
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
           # uncomment below and fill to pin a version
           # version: SPECIFIC-QUARTO-VERSION-HERE
-      
-      # add software dependencies here and any libraries
 
-      # From https://github.com/r-lib/actions/tree/v2-branch/setup-r
       - name: Setup R
         uses: r-lib/actions/setup-r@v2
 
       - name: Install system dependencies on Linux
-        run: sudo apt-get install jags libcurl4-openssl-dev libharfbuzz-dev libfribidi-dev 
+        run: |
+          sudo apt-get install jags libcurl4-openssl-dev \
+            libharfbuzz-dev libfribidi-dev 
 
       # From https://github.com/r-lib/actions/tree/v2/setup-renv
       - name: Setup dependencies with renv
