--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Setup R
         uses: r-lib/actions/setup-r@v2
 
-      - name: Install system dependencies on Linux
+      - name: Install system dependencies
         run: |
           sudo apt-get install jags libcurl4-openssl-dev \
             libharfbuzz-dev libfribidi-dev libsodium-dev
@@ -42,6 +42,12 @@ jobs:
         env: 
           AIRTABLE_API_KEY: ${{ secrets.AIRTABLE_API_KEY }}
 
+      - name: Upload Unjournal data
+        uses: actions/upload-artifact@v4
+        with:
+          name: unjournal-data
+          path: data
+          
       - name: Publish to GitHub Pages (and render)
         uses: quarto-dev/quarto-actions/publish@v2
         with:
