--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -25,13 +25,14 @@ jobs:
 
       - name: Setup R
         uses: r-lib/actions/setup-r@v2
-
+        with:
+          r-version: 'renv'
+          
       - name: Install system dependencies
         run: |
           sudo apt-get install jags libcurl4-openssl-dev \
             libharfbuzz-dev libfribidi-dev libsodium-dev
 
-      # From https://github.com/r-lib/actions/tree/v2/setup-renv
       - name: Setup dependencies with renv
         uses: r-lib/actions/setup-renv@v2
         with:
