--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,8 +54,7 @@ jobs:
       
       - name: Update data in repository
         run: |
-          git add data/evals.Rdata data/evals.csv data/all_papers_p.Rdata \
-                  data/all_papers_p.csv
+          git add data/evals.csv data/all_papers_p.csv
           git commit -m "Github actions: auto-update data"
           git push
       
