--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,6 +54,8 @@ jobs:
       
       - name: Update data in repository
         run: |
+          git config --global user.email "github-actions@github.com"
+          git config --global user.name "Github Actions"
           git add data/evals.csv data/all_papers_p.csv
           git commit -m "Github actions: auto-update data"
           git push
