--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,10 +79,10 @@ jobs:
                                      forceUpdate = TRUE)
         shell: Rscript {0}
         
-      # - name: Publish to GitHub Pages (and render)
-      #   uses: quarto-dev/quarto-actions/publish@v2
-      #   with:
-      #     target: gh-pages
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
+       - name: Render and publish website to GitHub Pages 
+         uses: quarto-dev/quarto-actions/publish@v2
+         with:
+           target: gh-pages
+         env:
+           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
 
