--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,12 +43,11 @@ jobs:
 
       - name: Import Unjournal data
         run: |
-          source("code/import-unjournal-data.R")
-          save_data()
+          .venv/bin/activate
+          python3 code/import-unjournal-data.py
         env: 
-          AIRTABLE_API_KEY: ${{ secrets.AIRTABLE_API_KEY }}
-        shell: Rscript {0}
-        
+          CODA_API_KEY: ${{ secrets.CODA_API_KEY }}
+
       - name: Upload Unjournal data as artifact
         uses: actions/upload-artifact@v4
         with:
