--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,7 +11,7 @@ book:
     - index.qmd
     - chapters/evaluation_data_input.qmd
     - chapters/evaluation_data_analysis.qmd
-    - chapters/aggregation.qmd
+    #- chapters/aggregation.qmd
     - chapters/uj-data-first-look.qmd
       #- references.qmd
   reader-mode: true
