--- a/.github/workflows/render-and-publish.yml
+++ b/.github/workflows/render-and-publish.yml
@@ -100,7 +100,7 @@ jobs:
         # The publish action also renders the website by default.
         uses: quarto-dev/quarto-actions/publish@v2
         with:
-          target: main
+          target: gh-pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
 
