Update deploy action to upload all csv files in data/. Remove dead files from data/.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,7 +58,7 @@ jobs:
         run: |
           git config --global user.email "github-actions@github.com"
           git config --global user.name "Github Actions"
-          git add data/evals.csv data/all_papers_p.csv
+          git add data/*.csv
           git diff-index HEAD data/*.csv || git commit -m "Github actions: auto-update data"
           git push
       
