--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,19 +34,26 @@ jobs:
           sudo apt-get install jags libcurl4-openssl-dev \
             libharfbuzz-dev libfribidi-dev libsodium-dev
 
+      - name: Set up Python 3.11 and install requirements
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+          cache: 'pip' # caching pip dependencies
+      - run: pip install -r requirements.txt
+
+      - name: Import Unjournal data
+        run: |
+          source .venv/bin/activate
+          python3 code/import-unjournal-data.py
+        env: 
+          CODA_API_KEY: ${{ secrets.CODA_API_KEY }}
+          
       - name: Setup dependencies with renv
         uses: r-lib/actions/setup-renv@v2
         with:
           cache-version: 2 # increment this to invalidate the renv cache
         env:
           GITHUB_PAT: ${{ secrets.RENV_GITHUB_PAT }}
-
-      - name: Import Unjournal data
-        run: |
-          .venv/bin/activate
-          python3 code/import-unjournal-data.py
-        env: 
-          CODA_API_KEY: ${{ secrets.CODA_API_KEY }}
 
       - name: Upload Unjournal data as artifact
         uses: actions/upload-artifact@v4
