--- a/.github/workflows/import-render-publish.yml
+++ b/.github/workflows/import-render-publish.yml
@@ -111,5 +111,6 @@ jobs:
         with:
           target: gh-pages
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
+          # this secret is always available for github actions
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
 
