--- a/.github/workflows/import-render-publish.yml
+++ b/.github/workflows/import-render-publish.yml
@@ -43,10 +43,18 @@ jobs:
           path: data
       
       - name: Update Unjournal data in repository
+        # There is a race condition here: if someone else, or another
+        # copy of this workflow, commits and pushes data between initial 
+        # checkout and this push, then the push will fail. If this happens, 
+        # just rerun the workflow manually.
+        # 
+        # `diff-index` with the `--exit-code` option returns 0 if there's no
+        # difference between the working copy and the HEAD branch.
         run: |
           git config --global user.email "github-actions@github.com"
           git config --global user.name "Github Actions"
           git add data/*.csv
+
           git diff-index --exit-code HEAD data/*.csv || git commit -m "Github actions: auto-update data"
           git push
         
