--- a/.github/workflows/import-render-publish.yml
+++ b/.github/workflows/import-render-publish.yml
@@ -72,7 +72,7 @@ jobs:
         run: |
           sudo apt-get install jags libcurl4-openssl-dev \
             libharfbuzz-dev libfribidi-dev libsodium-dev libfontconfig1-dev \
-            libfreetype6-dev libpng-dev libtiff5-dev libjpeg-dev
+            libfreetype6-dev libpng-dev libtiff5-dev libjpeg-dev libcairo2-dev
           
       - name: Setup dependencies with renv
         uses: r-lib/actions/setup-renv@v2
