Add "git pull" to github action, hoping to make race conditions harder

--- a/.github/workflows/import-render-publish.yml
+++ b/.github/workflows/import-render-publish.yml
@@ -53,8 +53,8 @@ jobs:
         run: |
           git config --global user.email "github-actions@github.com"
           git config --global user.name "Github Actions"
+          git pull # try to minimize race condition
           git add data/*.csv
-
           git diff-index --exit-code HEAD data/*.csv || git commit -m "Github actions: auto-update data"
           git push
         
