Add SQLite database setup: scripts, docs, and privacy protections
- Add export_to_sqlite.py for SQLite database export
- Add linode_setup/ scripts for automated Linode deployment
- Add comprehensive documentation (FAQ, setup guide, query examples)
- Update README with database info and data pipeline diagram
- Fix privacy documentation in EVALUATOR_DATASET_README
- Add .env files to .gitignore for security
- Integrate evaluator-paper dataset creation with SQLite export

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@
 *.knit.md
 # R Environment Variables
 .Renviron
+# Python environment files (used for Linode SQLite sync)
+.env
+*.env
 # translation temp files
 po/*~
 # RStudio Connect folder
